got rid of some intelliJ warnings